--- a/modules/mongo/documentdb/0.1/facets.yaml
+++ b/modules/mongo/documentdb/0.1/facets.yaml
@@ -4,7 +4,74 @@ version: '0.1'
 description: Adds mongo - documentdb flavor
 clouds:
 - aws
+- AWS
+intent: documentdb
+flavor: aws
+version: '0.1'
+description: Adds Amazon DocumentDB cluster - AWS flavor
+clouds:
 - aws
+spec:
+  title: DocumentDB Configuration
+  type: object
+  properties:
+    documentdb_version:
+      type: string
+      title: DocumentDB Version
+      description: Specifies the DocumentDB engine version to use.
+      x-ui-typeable: true
+      enum:
+        - "3.6.0"
+        - "4.0.0"
+        - "5.0.0"
+      x-ui-placeholder: "e.g., '4.0.0'"
+      x-ui-error-message: "Please select a valid DocumentDB version."
+    size:
+      type: object
+      title: Size Configuration
+      description: Size and capacity configuration for the DocumentDB cluster.
+      properties:
+        instance_count:
+          type: integer
+          title: Instance Count
+          description: Number of DocumentDB instances in the cluster.
+          minimum: 1
+          maximum: 16
+          default: 1
+          x-ui-placeholder: "e.g., 1 or 3"
+          x-ui-error-message: "Instance count must be between 1 and 16."
+        instance:
+          type: string
+          title: Instance Class
+          description: The compute and memory capacity of the DocumentDB instances.
+          x-ui-typeable: true
+          enum:
+            - "db.t3.medium"
+            - "db.t4g.medium"
+            - "db.r5.large"
+            - "db.r5.xlarge"
+            - "db.r5.2xlarge"
+            - "db.r5.4xlarge"
+            - "db.r5.12xlarge"
+            - "db.r5.24xlarge"
+            - "db.r6g.large"
+            - "db.r6g.xlarge"
+            - "db.r6g.2xlarge"
+            - "db.r6g.4xlarge"
+            - "db.r6g.8xlarge"
+            - "db.r6g.12xlarge"
+            - "db.r6g.16xlarge"
+          x-ui-placeholder: "e.g., 'db.r5.large'"
+          x-ui-error-message: "Please select a valid instance class."
+      required:
+        - instance_count
+        - instance
+  required:
+    - documentdb_version
+    - size
+  x-ui-order:
+    - documentdb_version
+    - size
 sample:
   kind: mongo
   flavor: documentdb
