--- a/modules/zookeeper/k8s/0.1/facets.yaml
+++ b/modules/zookeeper/k8s/0.1/facets.yaml
@@ -7,6 +7,89 @@ clouds:
 - gcp
 - azure
 - kubernetes
+intent: zookeeper
+flavor: k8s
+version: '0.1'
+description: Adds Apache ZooKeeper - k8s flavor
+clouds:
+- gcp
+- kubernetes
+- azure
+- aws
+spec:
+  title: ZooKeeper Configuration
+  type: object
+  properties:
+    zookeeper_version:
+      type: string
+      title: ZooKeeper Version
+      description: Specifies the ZooKeeper version to use.
+      x-ui-typeable: true
+      enum:
+        - "3.7.2"
+        - "3.8.4"
+        - "3.9.2"
+        - "3.9.3"
+        - "3.10.0"
+      x-ui-placeholder: "e.g., '3.9.2'"
+      x-ui-error-message: "Please select a valid ZooKeeper version."
+    size:
+      type: object
+      title: Size Configuration
+      description: Size and capacity configuration for the ZooKeeper cluster.
+      properties:
+        replica_count:
+          type: integer
+          title: Replica Count
+          description: Number of ZooKeeper replicas in the cluster.
+          minimum: 1
+          maximum: 10
+          default: 3
+          x-ui-placeholder: "e.g., 3"
+          x-ui-error-message: "Replica count must be between 1 and 10."
+        instance_count:
+          type: integer
+          title: Instance Count
+          description: Number of instances to create (alias for replica_count).
+          minimum: 1
+          maximum: 10
+          default: 3
+          x-ui-placeholder: "e.g., 3"
+          x-ui-error-message: "Instance count must be between 1 and 10."
+        cpu:
+          type: string
+          title: CPU Limit
+          description: CPU resource limit for ZooKeeper pods.
+          minLength: 1
+          pattern: "^([1-9]|[12][0-9]|3[0-2])$|^(3[0-1][0-9]{3}|[1-2][0-9]{4}|[1-9][0-9]{0,3}|32000)m$"
+          default: "250m"
+          x-ui-placeholder: "e.g., '250m' or '1'"
+          x-ui-error-message: "Value doesn't match pattern, it should be number ranging from 1 to 32 or 1m to 32000m"
+        memory:
+          type: string
+          title: Memory Limit
+          description: Memory resource limit for ZooKeeper pods.
+          minLength: 1
+          pattern: "^(0\\.[1-9]|[1-9](\\.[0-9]+)?|[1-5][0-9](\\.[0-9]+)?|6[0-4])Gi$|^([1-9](\\.[0-9]+)?|[1-9][0-9]{1,3}(\\.[0-9]+)?|[1-5][0-9]{4}(\\.[0-9]+)?|6[0-3][0-9]{3}(\\.[0-9]+)?|64000)Mi$"
+          default: "256Mi"
+          x-ui-placeholder: "e.g., '256Mi' or '1Gi'"
+          x-ui-error-message: "Value doesn't match pattern, it should be number ranging from 1Gi to 64Gi or 1Mi to 64000Mi"
+        volume:
+          type: string
+          title: Volume Size
+          description: The size of the persistent volume for each ZooKeeper instance.
+          minLength: 1
+          pattern: "^[0-9]+[G]i?$"
+          x-ui-placeholder: "e.g., '8Gi' or '10Gi'"
+          x-ui-error-message: "Volume must be specified in the correct format with integer only (e.g., '8Gi' or '10Gi')."
+      required:
+        - volume
+  required:
+    - zookeeper_version
+    - size
+  x-ui-order:
+    - zookeeper_version
+    - size
 sample:
   $schema: https://facets-cloud.github.io/facets-schemas/schemas/zookeeper/zookeeper.schema.json
   disabled: true
